--- a/src/styles/MoviePoster.less
+++ b/src/styles/MoviePoster.less
@@ -7,6 +7,11 @@
   font-size: 14px;
   height: 491px;
   width: 275px;
+  &__image {
+    height: 408px;
+    width: 275px;
+    background-color: white;
+  }
   &__additional-info {
     margin: 13px;
   }
