--- a/src/styles/Navigation.less
+++ b/src/styles/Navigation.less
@@ -1,6 +1,6 @@
 @import "SiteColors.less";
 
-.Header {
+.Navigation {
   background-color: @main-yellow;
   text-align: center;
   height: 80px;
